--- a/1-drum-kit/index.html
+++ b/1-drum-kit/index.html
@@ -4,46 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drum-kit</title>
-    <script src="scripts.js" defer></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="keys">
-      <div data-key="65" class="key">
-        <kbd>A</kbd><span class="sound">clap</span>
-      </div>
-      <div data-key="83" class="key">
-        <kbd>S</kbd><span class="sound">hihat</span>
-      </div>
-      <div data-key="68" class="key">
-        <kbd>D</kbd><span class="sound">kick</span>
-      </div>
-      <div data-key="70" class="key">
-        <kbd>F</kbd><span class="sound">openhat</span>
-      </div>
-      <div data-key="71" class="key">
-        <kbd>G</kbd><span class="sound">boom</span>
-      </div>
-      <div data-key="72" class="key">
-        <kbd>H</kbd><span class="sound">ride</span>
-      </div>
-      <div data-key="74" class="key">
-        <kbd>J</kbd><span class="sound">snake</span>
-      </div>
-      <div data-key="75" class="key">
-        <kbd>K</kbd><span class="sound">tom</span>
-      </div>
-      <div data-key="76" 5class="key">
-        <kbd>L</kbd><span class="sound">tin</span>
-      </div>
+    <div id="keys">
+
     </div>
-    <audio data-key="65" src="sounds/playboi-carti-what-sound-effect-adlib-made-with-Voicemod.mp3"></audio>
-    <audio data-key="83" src=""></audio>
-    <audio data-key="68" src=""></audio>
-    <audio data-key="70" src=""></audio>
-    <audio data-key="71" src=""></audio>
-    <audio data-key="72" src=""></audio>
-    <audio data-key="74" src=""></audio>
-    <audio data-key="75" src=""></audio>
-    <audio data-key="76" src=""></audio>
+
   </body>
 </html>
