--- a/3-Css-Variables/index.htm
+++ b/3-Css-Variables/index.htm
@@ -3,37 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Css-variables</title>
   </head>
   <body>
     <h2>Update Css Variables with <span class="h1">JS</span></h2>
     <div class="controls">
-      <label for="spacing ">Spacing</label>
-      <input
-        type="range"
-        name="spacing"
-        min="10"
-        max="200"
-        value="10"
-        data-sizing="px"
-      />
+      <div>
+        <label for="spacing ">Spacing</label>
+        <input
+          type="range"
+          name="spacing"
+          min="0"
+          max="200"
+          value="0"
+          data-sizing="px"
+        />
+      </div>
 
-      <label for="blur">Blur</label>
-      <input
-        type="range"
-        name="blur"
-        min="0"
-        max="25"
-        value="10"
-        data-sizing="px"
-      />
+      <div>
+        <label for="border-radius">Border Radius</label>
+        <input
+          type="range"
+          name="border-radius"
+          min="0"
+          max="50"
+          value="0"
+          data-sizing="%"
+        />
+      </div>
 
-      <label for="base">Base colour</label>
-      <input type="color" name="base" value="#ffffff">
+      <div>
+        <label for="blur">Blur</label>
+        <input
+          type="range"
+          name="blur"
+          min="0"
+          max="25"
+          value="0"
+          data-sizing="px"
+        />
+      </div>
+
+      <div>
+        <label for="width">Width</label>
+        <input
+          type="range"
+          name="width"
+          min="200"
+          max="1500"
+          value="800"
+          data-sizing="px"
+        />
+      </div>
+      <div>
+        <label for="height">Height</label>
+        <input
+          type="range"
+          name="height"
+          min="200"
+          max="1500"
+          value="600"
+          data-sizing="px"
+        />
+      </div>
+
+      <div>
+        <label for="base">Base colour</label>
+        <input type="color" name="base" value="#ffffff" />
+      </div>
     </div>
 
-    <img src="https://picsum.photos/200/200" alt="img">
+    <img src="https://picsum.photos/800/600" alt="img" />
   </body>
 </html>
