Update landing page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>30DayChallange</title>
-</head>
-<body>
-    <div class="buttons">
-        <button id="1-drum-kit" >Drum Kit</button>
+  </head>
+  <body>
+    <div class="links">
+      <div>
+        <a href="1-drum-kit/index.html">
+          <h2>Drum kit</h2>
+          <img src="images/drum-kit.png" alt="clock"
+        /></a>
+      </div>
+      <div>
+        <a href="2-clock/index.html">
+          <h2>Clock</h2>
+          <img src="images/clock.png" alt="clock"
+        /></a>
+      </div>
+      <div>
+        <a href="3-css-variables/index.html">
+          <h2>Css variables</h2>
+          <img src="images/css-variables.png" alt="clock"
+        /></a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
