Update drum-kit and landing page

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <title>30DayChallange</title>
   </head>
   <body>
+    <h1>30 Day Challange</h1>
     <div class="links">
       <div>
         <a href="1-drum-kit/index.html">
+          <img src="images/drum-kit.png" alt="clock" />
           <h2>Drum kit</h2>
-          <img src="images/drum-kit.png" alt="clock"
-        /></a>
+        </a>
       </div>
       <div>
         <a href="2-clock/index.html">
+          <img src="images/clock.png" alt="clock" />
           <h2>Clock</h2>
-          <img src="images/clock.png" alt="clock"
-        /></a>
+        </a>
       </div>
       <div>
         <a href="3-css-variables/index.html">
+          <img src="images/css-variables.png" alt="clock" />
           <h2>Css variables</h2>
-          <img src="images/css-variables.png" alt="clock"
-        /></a>
+        </a>
       </div>
     </div>
   </body>
