--- a/3-Css-Variables/index.html
+++ b/3-Css-Variables/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-    <title>Css-variables</title>
+    <title>Variables</title>
   </head>
   <body>
     <h2>Update Css Variables with <span class="h1">JS</span></h2>
