--- a/15-localstorage-and-event-delegation/index.html
+++ b/15-localstorage-and-event-delegation/index.html
@@ -24,16 +24,15 @@
       <h2>LOCAL TAPAS</h2>
       <p></p>
       <ul class="plates">
-        <li>Loading Tapas...</li>
       </ul>
       <form class="add-items">
         <input type="text" name="item" placeholder="Item Name" required />
         <input type="submit" value="+ Add Item" />
       </form>
       <div class="buttons">
-        <button id="checkAll">Check All</button>
-        <button id="uncheckAll">Uncheck All</button>
-        <button id="clearAll">Clear All</button>
+        <button id="checkAll">Check</button>
+        <button id="uncheckAll">Uncheck</button>
+        <button id="clearAll">Clear</button>
       </div>
     </div>
   </body>
