--- a/18-tally-string-times-with-reduce/index.html
+++ b/18-tally-string-times-with-reduce/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js" defer></script>
-        <title>Tally String Times With Reduce</title>
-    </head>
-    <body>
-        <ul class="videos">
-            <li data-time="24:01">Video 1</li>
-            <li data-time="51:43">Video 2</li>
-            <li data-time="41:06">Video 3</li>
-            <li data-time="40:40">Video 4</li>
-            <li data-time="05:48">Video 5</li>
-            <li data-time="17:39">Video 6</li>
-            <li data-time="18:46">Video 7</li>
-            <li data-time="06:11">Video 8</li>
-            <li data-time="00:52">Video 9</li>
-            <li data-time="08:19">Video 10</li>
-            <li data-time="33:53">Video 11</li>
-            <li data-time="52:56">Video 12</li>
-            <li data-time="51:54">Video 13</li>
-            <li data-time="54:50">Video 14</li>
-            <li data-time="13:28">Video 15</li>
-            <li data-time="58:33">Video 16</li>
-            <li data-time="13:34">Video 17</li>
-            <li data-time="17:33">Video 18</li>
-            <li data-time="33:34">Video 19</li>
-            <li data-time="21:53">Video 20</li>
-            <li data-time="18:56">Video 21</li>
-            <li data-time="25:17">Video 22</li>
-            <li data-time="03:44">Video 23</li>
-            <li data-time="00:26">Video 24</li>
-            <li data-time="03:25">Video 25</li>
-            <li data-time="04:40">Video 26</li>
-            <li data-time="05:02">Video 27</li>
-            <li data-time="47:40">Video 28</li>
-            <li data-time="17:52">Video 29</li>
-            <li data-time="24:50">Video 30</li>
-            <li data-time="45:52">Video 31</li>
-            <li data-time="22:30">Video 32</li>
-            <li data-time="49:09">Video 33</li>
-        </ul>
-
-    </body>
-    </html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <title>Tally String Times With Reduce</title>
+  </head>
+  <body>
+    <ul class="videos">
+      <li data-time="24:01">Video 1</li>
+      <li data-time="51:43">Video 2</li>
+      <li data-time="41:06">Video 3</li>
+      <li data-time="40:40">Video 4</li>
+      <li data-time="05:48">Video 5</li>
+      <li data-time="17:39">Video 6</li>
+      <li data-time="18:46">Video 7</li>
+      <li data-time="06:11">Video 8</li>
+      <li data-time="00:52">Video 9</li>
+      <li data-time="08:19">Video 10</li>
+      <li data-time="33:53">Video 11</li>
+      <li data-time="52:56">Video 12</li>
+      <li data-time="51:54">Video 13</li>
+      <li data-time="54:50">Video 14</li>
+      <li data-time="13:28">Video 15</li>
+      <li data-time="58:33">Video 16</li>
+      <li data-time="13:34">Video 17</li>
+      <li data-time="17:33">Video 18</li>
+      <li data-time="33:34">Video 19</li>
+      <li data-time="21:53">Video 20</li>
+      <li data-time="18:56">Video 21</li>
+      <li data-time="25:17">Video 22</li>
+      <li data-time="03:44">Video 23</li>
+      <li data-time="00:26">Video 24</li>
+      <li data-time="03:25">Video 25</li>
+      <li data-time="04:40">Video 26</li>
+      <li data-time="05:02">Video 27</li>
+      <li data-time="47:40">Video 28</li>
+      <li data-time="17:52">Video 29</li>
+      <li data-time="24:50">Video 30</li>
+      <li data-time="45:52">Video 31</li>
+      <li data-time="22:30">Video 32</li>
+      <li data-time="49:09">Video 33</li>
+    </ul>
+  </body>
+</html>
