--- a/19-unreal-webcam-fun/index.html
+++ b/19-unreal-webcam-fun/index.html
@@ -28,12 +28,12 @@
           </div>
           <div>
             <div>
-              <label for="gmax">gmax</label>
-              <input type="range" min="0" max="255" name="gmax" />
-            </div>
-            <div>
               <label for="rmax">rmax </label>
               <input type="range" min="0" max="255" name="rmax" />
+            </div>
+            <div>
+              <label for="gmax">gmax</label>
+              <input type="range" min="0" max="255" name="gmax" />
             </div>
             <div>
               <label for="bmax">bmax</label>
@@ -41,6 +41,13 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="filters">
+        <button class="alpha">Alpha</button>
+        <button class="red">Red</button>
+        <button class="green">Green</button>
+        <button class="blue">Blue</button>
+        <button class="split">Split</button>
       </div>
 
       <canvas class="photo"> </canvas>
