--- a/24-sticky-nav/index.html
+++ b/24-sticky-nav/index.html
@@ -1,13 +1,157 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js" defer></script>
-        <title>Sticky Nav</title>
-    </head>
-    <body>
-        
-    </body>
-    </html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <title>Sticky Nav</title>
+  </head>
+  <body>
+    <div id="text">
+      <h1>Lorem Ipsum</h1>
+    </div>
+    <nav>
+      <ul class="menu">
+        <li class="logo"><a href="">Lorem</a></li>
+        <li><a href="">Home</a></li>
+        <li><a href="">Order Status</a></li>
+        <li><a href="">Tweets</a></li>
+        <li><a href="">Read Our History</a></li>
+        <li><a href="">Contact us</a></li>
+      </ul>
+    </nav>
+    <article>
+      <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+        accusamus ullam impedit voluptate quae eligendi ab vel ut quam suscipit.
+        Minus laboriosam, sit adipisci tenetur quos exercitationem natus
+        architecto sint voluptas, debitis id. Laboriosam porro itaque sint
+        incidunt natus nostrum, dignissimos, hic a laborum ipsam accusamus
+        reprehenderit ducimus error ipsa dolores molestiae corporis dolore
+        excepturi quae velit sed mollitia. Quia fugiat sit reprehenderit
+        quibusdam. Dolor fuga fugiat alias, quisquam nemo, consectetur nihil
+        itaque consequuntur facilis exercitationem ab inventore modi in aliquid
+        nisi eos molestiae maiores, ipsa porro. Molestias quisquam iusto sed,
+        ipsam totam impedit suscipit voluptatum dignissimos magnam error
+        aspernatur dolorum, nulla unde eaque odit. Consectetur eos, non,
+        veritatis deserunt quasi iusto consequatur officiis perspiciatis illo in
+        eius voluptatem eum labore molestiae laborum nesciunt, sunt similique
+        iure. Aut odit doloremque ut accusantium illo deserunt reprehenderit
+        nesciunt, fugiat temporibus quis earum perferendis quidem vitae dolorum
+        sequi officia! Nam natus harum saepe!
+      </div>
+      <div>
+        Dolore officiis veniam, unde atque, culpa debitis excepturi tempora,
+        aliquid eaque minus qui? Laborum sapiente, doloremque nemo nostrum
+        accusamus similique! Deserunt rerum aliquid eum natus expedita dolores
+        labore voluptatibus ex distinctio et at esse fugit, eligendi perferendis
+        id fuga. Dolorum assumenda repudiandae voluptates quos porro soluta
+        pariatur itaque magni natus libero. Distinctio incidunt eos deleniti
+        dolor officia, vero perferendis pariatur blanditiis illo molestias sed
+        cumque. Vel ratione voluptatem distinctio exercitationem at, deserunt
+        magnam perspiciatis, sequi veritatis illum et odit corrupti harum
+        laboriosam aliquam sint beatae nulla, tenetur quam voluptate tempore
+        repellat nostrum ex atque! Ad vel dignissimos voluptatibus culpa,
+        blanditiis, quo debitis autem eius labore tempora ullam iste commodi
+        harum ipsam dolores! Enim ullam deleniti ipsa atque necessitatibus
+        fugiat cupiditate magnam at consectetur possimus laborum, corrupti
+        debitis ducimus sunt non illum inventore voluptatem voluptatum
+        laudantium officiis labore vitae eum soluta! Autem, eaque enim eos optio
+        dolores non voluptates architecto est!
+      </div>
+      <div>
+        Dolor, dignissimos tenetur? Explicabo nesciunt vitae, eum ipsum nostrum
+        totam maiores necessitatibus ipsam impedit aspernatur fugit sunt nisi
+        assumenda accusantium esse corrupti nobis, unde molestias aliquam est
+        eos, nam sequi neque. Magni similique laudantium vel praesentium tempora
+        voluptatum, quibusdam, sed laborum eaque, eveniet expedita nihil
+        perspiciatis debitis nostrum dicta mollitia. Aliquid nobis cumque
+        excepturi veniam dolor veritatis est sit eum, aperiam earum aspernatur
+        nam possimus eveniet, laboriosam perferendis incidunt, a voluptatibus
+        enim quaerat quo perspiciatis! Tempore optio in id laboriosam corporis
+        excepturi fuga blanditiis, ea labore natus porro saepe modi qui,
+        temporibus eum aut facilis nam rerum iusto vel quia maiores autem?
+        Tempore nam voluptatum cupiditate sit incidunt placeat vero voluptates
+        excepturi autem laborum unde aspernatur doloremque officia nobis
+        eligendi quas earum facilis blanditiis, quaerat distinctio. Laboriosam
+        corporis beatae modi molestias ex deserunt explicabo exercitationem
+        placeat, alias officiis vero possimus voluptatum corrupti autem cumque
+        perferendis distinctio neque. Iste, magni accusamus?
+      </div>
+      <div>
+        Eaque quas possimus, reiciendis doloribus quod suscipit animi fugiat
+        ducimus corrupti quibusdam numquam placeat quos id deserunt explicabo.
+        At ipsa voluptatum quisquam facilis? Impedit, est. Corrupti esse veniam
+        accusantium assumenda reprehenderit blanditiis quae ducimus fugiat
+        deleniti voluptatum perspiciatis, possimus hic quaerat officiis ipsam
+        inventore voluptatem laboriosam commodi. Alias, vitae! Nam tempore aut
+        explicabo ratione incidunt et voluptas quae quam recusandae odio
+        adipisci magni, vel voluptates neque dolorem debitis excepturi possimus
+        at ducimus cum nesciunt aperiam, autem alias. Natus nihil cupiditate
+        deserunt distinctio! Eaque, maxime aperiam ipsam nesciunt ut, nisi
+        aliquam quaerat accusantium possimus vero ea, asperiores earum dolores
+        inventore dignissimos illum obcaecati ab tempora rem quae cupiditate
+        aspernatur! A eos debitis amet aperiam alias dignissimos veniam suscipit
+        id eveniet in quia magnam repellendus expedita voluptate molestias
+        fugiat nobis consequatur, cum rem. Vero iste soluta sint dicta illo quod
+        voluptatem quos perspiciatis sunt esse neque distinctio, at iusto unde.
+        Et, expedita.
+      </div>
+      <div>
+        Nulla explicabo consectetur rem dolores saepe doloremque repudiandae,
+        dolorem magni magnam commodi quasi, qui minima blanditiis dignissimos.
+        Quae aperiam et adipisci veniam est officia eius, tenetur cupiditate cum
+        possimus ut ea provident voluptatem consectetur, rem ipsa id ex!
+        Distinctio aliquid animi sint eum saepe dicta dolor molestiae iste totam
+        pariatur facilis ipsum aspernatur aut eius cum reprehenderit laudantium
+        alias, quo praesentium maiores ratione veritatis obcaecati. Magnam
+        aliquam delectus iusto voluptas vel omnis ducimus enim tempore nobis
+        architecto dignissimos vitae autem saepe, expedita, ipsa reprehenderit
+        quasi, quam eius unde hic. Beatae sunt magni omnis deserunt explicabo
+        hic doloribus natus excepturi. Voluptatibus, quia et quidem accusantium,
+        fugiat doloremque totam deleniti illum nesciunt esse voluptatum ducimus
+        unde quae molestias provident neque magni, recusandae animi molestiae
+        culpa eius! Iste, nisi nulla accusamus dolores eum ipsam, repellendus,
+        amet ratione eius magni inventore numquam voluptas nostrum odio facere
+        blanditiis. Numquam iure, expedita velit eaque consectetur accusantium!
+      </div>
+      <div>
+        Dolorem delectus sunt maiores porro omnis, aliquid deleniti sequi est!
+        Aliquam nostrum molestiae repellat tenetur rerum reiciendis nesciunt
+        suscipit pariatur, quidem, harum incidunt? Iure velit voluptas eaque
+        quidem nam, exercitationem placeat corrupti sapiente nisi aliquid, totam
+        culpa hic saepe quae odio est, harum deserunt provident? Possimus quos
+        odio, totam pariatur saepe vero deserunt ipsa nemo nisi. Nam doloribus
+        repellat autem blanditiis esse officiis commodi dolore, eos praesentium
+        molestiae modi dignissimos aspernatur in assumenda. Quia aliquam dolorem
+        tenetur repellat ducimus ut corrupti dicta aliquid, voluptas
+        exercitationem, veniam vero. Dolorum exercitationem minus eaque maxime
+        quo cum omnis neque. Inventore rerum blanditiis molestias, ipsum a
+        cumque obcaecati soluta! Id quas distinctio, voluptates laboriosam ipsa
+        porro in ullam ratione quaerat earum amet expedita officia illum tempora
+        delectus alias quam aliquid. Eveniet ipsa mollitia corporis architecto
+        voluptas pariatur numquam ad nobis, ullam, quibusdam iste esse deleniti
+        rerum soluta velit officia perferendis aperiam at! In, ratione.
+      </div>
+      <div>
+        Aperiam ipsum ullam id nihil, blanditiis, aut deserunt cum, eligendi
+        incidunt recusandae commodi ab expedita deleniti fuga officia
+        doloremque! Minima dolores hic totam enim. Alias molestias eaque eos
+        sapiente assumenda cum quia ex officiis maiores ut tempore reiciendis ad
+        at accusantium, placeat omnis eum magnam quam, nesciunt error
+        perferendis. Iure odio possimus, quaerat qui laudantium nostrum
+        dignissimos aliquam commodi minus, odit pariatur accusantium voluptatum
+        nemo praesentium adipisci? Ex obcaecati sunt deleniti, eius perferendis
+        ratione dignissimos maiores sint quos hic rerum totam. Laboriosam,
+        deleniti? Numquam praesentium eius qui in iste at sunt porro modi, neque
+        necessitatibus totam vero ea ratione est eos dicta earum esse voluptas
+        illum! Omnis, aut mollitia cum, quisquam eum iusto nihil laborum placeat
+        corrupti a hic aliquid dolores sint. Repellendus impedit velit
+        excepturi. Maiores natus deserunt laborum sed libero ducimus, corrupti
+        optio expedita error a nemo eos? Harum iure velit inventore rem
+        assumenda saepe cum provident possimus.
+      </div>
+    </article>
+  </body>
+</html>
