Add video-speed-controller-ui script

--- a/28-video-speed-controller-ui/index.html
+++ b/28-video-speed-controller-ui/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <video src="video/flower.mp4" class="flex"></video>
+      <video class="flex" controls loop src="video/flower.mp4" class="flex"></video>
       <div class="speed">
         <div class="speed-bar">1x</div>
       </div>
