Add countdown-clock script

--- a/29-countdown-clock/index.html
+++ b/29-countdown-clock/index.html
@@ -20,9 +20,10 @@
         </form>
       </div>
       <div class="display">
-        <h1 class="display__time-left">2:16</h1>
-        <p class="display__end-time">Be back at 2:08</p>
+        <h1 class="display__time-left"></h1>
+        <p class="display__end-time"></p>
       </div>
     </div>
+    <audio src="beep.mp3"></audio>
   </body>
 </html>
