--- a/30-whack-a-mole-game/index.html
+++ b/30-whack-a-mole-game/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Whack-a-mole!<span class="score">0</span></h1>
+    <div class="wrapper"><button onclick="startGame()">Start Game</button></div>
     <div class="game">
       <div class="hole hole1">
         <div class="mole"></div>
